# dog-ceo-api-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  run-prod.sh
nginx/: images.conf  nginx.conf
scripts/: benchmark.sh  parity_check.sh  provision-podman-host.sh
src/: main.rs
