[package]
name = "dog-ceo-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8"
axum = "0.8"
fastrand = "2"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
